--- a/SobreNós.html
+++ b/SobreNós.html
@@ -24,7 +24,6 @@
                     <li><img onclick="AbreFecha()" src="project/images-html/botao-fechar.png"></li>
                     <li><a href=#>Cardápio</a></li>
                     <li><a href=#>Ofertas</a></li>
-                    <li><a href=SobreNós.html>Sobre Nós</a></li>
                     <li><a href=#>Cadastre-se</a></li>
                 </ul>    
             </section>            
@@ -33,9 +32,8 @@
         <nav class="cabecalhodesktop">
             <a href="index.html"><img src="project/images-html/logotipo2.png"></a>
             <ul>
-                <li><a href=#cardapio>Cardápio</a></li>
-                <li><a href=#>Ofertas</a></li>
-                <li><a href=SobreNós.html>Sobre Nós</a></li>
+                <li><a href="#cardapio">Cardápio</a></li>
+                <li><a href=#ofertas>Ofertas</a></li>
                 <li><a href=#>Cadastre-se</a></li>
             </ul>
         </nav>
@@ -44,7 +42,7 @@
   
     <main>
         <div class="SVM">
-            <div class="SobreNós">
+            <div class="SobreNos">
                 <img src="project/images-html/Missão.jpeg">
                 <h3 style="font-size: 5vh;">Sobre Nós</h3>
                 <p>
@@ -59,7 +57,7 @@
                     Na Royal Meats, nosso objetivo é criar não apenas hambúrgueres incríveis, mas também momentos em que você se sinta um rei. 
                     Valorizamos sua satisfação e estamos empenhados em proporcionar uma experiência gastronômica que deixará um gostinho de quero mais.
                     <br>
-                    <p style="font-size: 3.5vh;">Venha provar O verdadeiro Hambúrguer da Realeza.</p>
+                    <p style="font-size: 3.5vh;">Venha provar O verdadeiro Hambúrguer da Realeza®.</p>
                 </p>
             </div>
             <br>
@@ -125,5 +123,4 @@
         </p>
     </footer>
 </body>
-
 </html>
