--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
             <nav class="prato1">
                 <br>
                 <h2>RM King®</h2>
-                <b><img src="project/images-html/burguer9.png"></b>
+                <img src="project/images-html/burguer9.png">
                 <p>
                     Três deliciosas carnes grelhadas no fogo como churrasco, cheddar fatiado, bacon e molho Royal Meats.<br><br>
                     Por R$45,00
@@ -160,7 +160,7 @@
             <nav class="prato1">
                 <br>
                 <h2>®</h2>
-                <b><img src="project/images-html/burguer10.png"></b>
+                <img src="project/images-html/burguer10.png">
                 <p>
                     Três deliciosas carnes grelhadas no fogo como churrasco, cheddar fatiado, bacon e molho Royal Meats.<br><br>
                     Por R$45,00
