--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                 </p><br>
             </nav>
 
-            <nav class="prato1">
+            <nav class="prato">
                 <br>
                 <h2>RM King®</h2>
                 <img src="project/images-html/burguer9.png">
@@ -157,7 +157,7 @@
                 </p><br>
             </nav>
 
-            <nav class="prato1">
+            <nav class="prato">
                 <br>
                 <h2>®</h2>
                 <img src="project/images-html/burguer10.png">
