--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
         </nav>
 
         <nav class="prato">
-            <br><br>
+            <br>
             <h2>Classic Onion Rings</h2>
             <img src="project/images-html/burguer2.png">
             <p>
-                Dois deliciosos hambúrgueres grelhados no fogo como churrasco, cheddar fatiado, onion rings, molho barbecue e maionese RM®.<br><br>
+                Pão com gergelim, com dois deliciosos hambúrgueres grelhados no fogo como churrasco, cheddar fatiado, onion rings, molho barbecue e maionese RM®.<br><br>
                 De <r1>R$35,00</r1> Por R$29,50
             </p><br>
         </nav>
@@ -151,7 +151,7 @@
     </main>
 
     <footer>
-        <hr>
+        <hr>   
         <nav class="redes">
             <h3>Siga-nos nas redes!</h3>
             <a href="https://www.instagram.com/_royalmeats/" target="_blank"><img src="project/images-html/instagram.png"></a>
