--- a/sobre.html
+++ b/sobre.html
@@ -22,9 +22,9 @@
                 <ul>
                     <img class="visivel" onclick="AbreFecha()" src="project/images-html/cardapio.png">
                     <li><img onclick="AbreFecha()" src="project/images-html/botao-fechar.png"></li>
-                    <li><a href=#>Cardápio</a></li>
-                    <li><a href=#>Ofertas</a></li>
-                    <li><a href=#>Cadastre-se</a></li>
+                    <li><a href=#cardapio>Cardápio</a></li>
+                    <li><a href=#ofertas>Ofertas</a></li>
+                    <li><a href=#>Delivery</a></li>
                 </ul>    
             </section>            
         </nav>
@@ -34,7 +34,7 @@
             <ul>
                 <li><a href="#cardapio">Cardápio</a></li>
                 <li><a href=#ofertas>Ofertas</a></li>
-                <li><a href=#>Cadastre-se</a></li>
+                <li><a href=#>Delivery</a></li>
             </ul>
         </nav>
 
