--- a/cadastro.html
+++ b/cadastro.html
@@ -93,7 +93,7 @@
             <br>
             <div class="botao">
             <input id="botao" type="submit" onclick="valida()" value="Cadastrar"><br>
-            <a href="combos.html"><input id="acessar" type="button" value="acessar"></a>
+            <a href="combos.html"><input id="acessar" type="button" value="Acessar"></a>
             </div>
         </form>
         <br><br>
