--- a/cadastro.html
+++ b/cadastro.html
@@ -44,7 +44,7 @@
         <div class="campo">
         <form>    
             <div>
-                <h2>Cadastre-se para receber ofertas imperdíveis</h2>
+                <h3>Cadastre-se para receber ofertas imperdíveis!</h3>
             </div>
             <div id="P1">
                 <p>Nome Completo: <input id="end" minlength="15" required type="text" placeholder="nome Completo" title="digite seu nome"></p>
