--- a/cadastro.html
+++ b/cadastro.html
@@ -47,14 +47,14 @@
                 <h3>Cadastre-se para receber ofertas imperdíveis!</h3>
             </div>
             <div id="P1">
-                <p>Nome Completo: <input id="end" minlength="15" required type="text" placeholder="nome Completo" title="digite seu nome"></p>
-                <p>Telefone: <input id="end" maxlength="11" required type="tel" placeholder="telefone" title="digite seu telefone"></p>
-                <p>Email: <input id="end" required type="email" placeholder="email" title="digite seu email"></p>
-                <p>Crie uma Senha: <input id="end" minlength="8" required type="password" placeholder="senha" title="digite uma senha"></p>
+                <p>Nome Completo: <input id="nome" minlength="15" required type="text" placeholder="nome Completo" title="digite seu nome"></p>
+                <p>Telefone: <input id="tel" maxlength="11" required type="tel" placeholder="telefone" title="digite seu telefone"></p>
+                <p>Email: <input id="email" required type="email" placeholder="email" title="digite seu email"></p>
+                <p>Crie uma Senha: <input id="senha" minlength="8" required type="password" placeholder="senha" title="digite uma senha"></p>
             </div>
             <div id="P2">
                 <p>CEP: <input id="cep" maxlength="9" required type="text" placeholder="CEP" title="digite seu cep"></p>
-                <p>Endereço: <input style="width: 25vw;" id="end" required type="text" placeholder="bairro,rua,número" title="digite seu endereço"></p>
+                <p>Endereço: <input id="end" required type="text" placeholder="bairro,rua,número" title="digite seu endereço"></p>
                 <p>Complemento: <input type="text" placeholder="opcional*" title="digite seu complemento"></p>
                 <p>Cidade: <input id="cidade" required type="text" placeholder="cidade" title="digite sua cidade"></p>
             </div>
